--- a/blog/scss/main.scss
+++ b/blog/scss/main.scss
@@ -1,1 +1,131 @@
-// write your code here
+body {
+    margin:0;
+    
+}
+
+
+.main-header {
+    
+    overflow:hidden;
+    background-color:hsla(254, 85%, 25%, 0.79);
+    box-shadow:0px 5px 5px black;
+    position:fixed;
+    width:100%;
+    top:0;
+    z-index:10;
+    
+    &__title {
+        
+        font-family: sans-serif;
+        color:black;
+        margin:0;
+        padding:0.2em 0 0 0.2em;
+        text-shadow:3px 3px 5px black;
+    }
+    
+    &__tagline {
+        margin:0;
+        padding:0.5em 0 0.2em 0.4em;
+        font-style:italic;
+        text-shadow:3px 3px 5px black;
+    }
+    
+}
+.article {
+    
+    position:relative;
+    top:100px;
+    float:none;
+    
+    &__title {
+        padding:0 0 0.5em 0.5em;
+        margin:0;
+        text-shadow:2px 1px 10px black;
+        
+        &::before {
+            content:">>";
+            color:hsla(254, 85%, 25%, 0.99);
+            background-color:black;
+            border-radius:10%;
+            padding:0 0.3em 0 0.3em;
+            margin-right:0.2em;
+            box-shadow:2px 1px 10px black;
+            display:inline-block;
+            font-size:20px;
+        }
+    }
+    
+    &__featured-image {
+        margin:0 0.5em 0 0.5em;
+        border:2px solid black;
+        width:20em;
+        float:left;
+        box-shadow:3px 3px 5px #333;
+        
+    }
+    
+    &__paragraph {
+        
+        margin:0.5em 0.5em 0 0.5em;
+        text-align:justify;
+        line-height:1.25;
+        
+        &:not(&--first) {
+            text-indent:3em;
+        }
+        
+        &--first {
+            margin-top:0;
+            
+            &::first-letter {
+                font-size:70px;
+                margin-right:5px;
+                margin-top:-13px;
+                margin-bottom:-15px;
+                float:left;
+            }
+            
+            a {
+                color:hsla(254, 85%, 25%, 0.79);
+                font-weight:bold;
+                text-decoration:none;
+                
+                &:hover {
+                    text-decoration:line-through;
+                }
+            }
+        }
+    }
+}
+
+.author-info {
+    margin:1em 20% 1em 20%;
+    padding:1em 1em 2em 1em;
+    background-color:hsla(254, 85%, 25%, 0.79);
+    border:2px solid black;
+    box-shadow:0px 5px 5px black;
+    
+    &__image {
+        border-radius:50%;
+        float:left;
+        width:100px;
+        margin-right:0.5em;
+        border:2px solid black;
+    }
+    
+    &__text {
+        padding-top:0.5em;
+        text-align:justify;
+        font-weight:bold;
+        text-shadow:2px 1px 10px black;
+        
+        a {
+            color:#999;
+            text-decoration:none;
+            
+            &:hover {
+                text-decoration:line-through;
+            }
+        }
+    }
+}
