--- a/blog/scss/main.scss
+++ b/blog/scss/main.scss
@@ -1,8 +1,6 @@
 body {
     margin:0;
-    
 }
-
 .main-header {
     background-color:hsla(254, 85%, 25%, 0.79);
     box-shadow:0px 5px 5px black;
@@ -12,24 +10,20 @@ body {
     z-index:10;
     
     &__title {
-        
         font-family: sans-serif;
         color:black;
         margin:0;
         padding:0.2em 0 0 0.2em;
         text-shadow:3px 3px 5px black;
     }
-    
     &__tagline {
         margin:0;
         padding:0.5em 0 0.2em 0.4em;
         font-style:italic;
         text-shadow:3px 3px 5px black;
     }
-    
 }
 .article {
-    
     position:relative;
     top:100px;
     float:none;
@@ -48,19 +42,16 @@ body {
             margin-right:0.2em;
             box-shadow:2px 1px 10px black;
             display:inline-block;
-            font-size:20px;
+            font-size:0.9em;
         }
     }
-    
     &__featured-image {
         margin:0 0.5em 0 0.5em;
         border:2px solid black;
         width:20em;
         float:left;
         box-shadow:3px 3px 5px #333;
-        
     }
-    
     &__paragraph {
         
         margin:0.5em 0.5em 0 0.5em;
@@ -70,18 +61,16 @@ body {
         &:not(&--first) {
             text-indent:3em;
         }
-        
         &--first {
             margin-top:0;
             
             &::first-letter {
-                font-size:70px;
+                font-size:4.4em;
                 margin-right:5px;
                 margin-top:-13px;
                 margin-bottom:-15px;
                 float:left;
             }
-            
             a {
                 color:hsla(254, 85%, 25%, 0.79);
                 font-weight:bold;
@@ -109,7 +98,6 @@ body {
         margin-right:0.5em;
         border:2px solid black;
     }
-    
     &__text {
         padding-top:0.5em;
         text-align:justify;
