--- a/holy-grail/scss/main.scss
+++ b/holy-grail/scss/main.scss
@@ -3,13 +3,13 @@ body {
 }
 .HolyGrail {
     display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+    min-height: 100vh;
 }
 		
 .HolyGrail-body {
     display:flex;
-    justify-content: center;
+    flex: 1;
 }
 		
 .HolyGrail-header {
@@ -18,40 +18,34 @@ body {
     padding:0.1em;
     text-align:center;
 }
-	
- .HolyGrail-nav {
-    width: 15%;
-    height: 100%;
+.HolyGrail-nav {
+    // height: 100%;
     background-color:#fff;
     order:-1;
     padding:0.5em;
-    
-    strong {
-        text-align:center;
-    }
+    text-align:center;
 }
-	
- .HolyGrail-content {
-    width: 70%;
-    height: 100%;
+.HolyGrail-content {
+    // height: 100%;
     background-color:#999;
     padding:0.5em;
     text-align:justify;
+    flex: 1;
     
     h1 {
         margin:0;
     }
 }
+
+.HolyGrail-nav, .HolyGrail-ads {
+  flex: 0 0 12em;
+}
 	
 .HolyGrail-ads {
-    width: 15%;
-    height: 100%;
+    // height: 100%;
     background-color:#fff;
     padding:0.5em;
-    
-    strong {
-        text-align:center;
-    }
+    text-align:center;
 }
 	
 .HolyGrail-footer {
