--- a/holy-grail/scss/main.scss
+++ b/holy-grail/scss/main.scss
@@ -1,15 +1,9 @@
 body {
     margin:0;
 }
-.HolyGrail {
-    display:flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-		
+
 .HolyGrail-body {
     display:flex;
-    flex: 1;
 }
 		
 .HolyGrail-header {
@@ -18,40 +12,32 @@ body {
     padding:0.1em;
     text-align:center;
 }
-.HolyGrail-nav {
-    // height: 100%;
-    background-color:#fff;
-    order:-1;
-    padding:0.5em;
-    text-align:center;
-}
+
 .HolyGrail-content {
-    // height: 100%;
     background-color:#999;
     padding:0.5em;
     text-align:justify;
-    flex: 1;
+    flex: 3;
     
     h1 {
         margin:0;
     }
 }
 
-.HolyGrail-nav, .HolyGrail-ads {
-  flex: 0 0 12em;
+.HolyGrail-nav {
+    order:-1;
 }
-	
-.HolyGrail-ads {
-    // height: 100%;
+
+.HolyGrail-nav, .HolyGrail-ads {
+    flex: 1 1;
     background-color:#fff;
     padding:0.5em;
     text-align:center;
 }
-	
+
 .HolyGrail-footer {
     width: 100%;
     background-color:#666;
     padding:0.3em;
     text-align:center;
 }
-	
